k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llmmll-server
  namespace: llmmll
  labels:
    app: llmmll-server
spec:
  selector:
    matchLabels:
      app: llmmll-server
  template:
    metadata:
      labels:
        app: llmmll-server
    spec:
      containers:
        - name: server
          image: 192.168.0.71:31500/server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8001
              protocol: TCP
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "2"
  strategy:
    type: Recreate
  replicas: 1
